[gd_scene load_steps=4 format=3 uid="uid://cydpl45ysvfqy"]

[ext_resource type="Script" uid="uid://cii3cmitub7f5" path="res://scenes/interactable/reset_pressure_plate.gd" id="1_nhtva"]
[ext_resource type="Texture2D" uid="uid://d15tvjlu3axh4" path="res://assets/reset_pressure_plate.png" id="2_fdl42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdl42"]
size = Vector2(10, 10)

[node name="ResetPressurePlate" type="Node2D"]
script = ExtResource("1_nhtva")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fdl42")
offset = Vector2(6, 6)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 6)
shape = SubResource("RectangleShape2D_fdl42")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
